# Mine-imator

./: CMakeLists.txt  README.md  main.cpp
dep/dlib/: dialogfunc.cpp  dialogfunc.h  dlib.h  filefunc.cpp  filefunc.h  stringfunc.cpp  stringfunc.h
dep/filedialog/: filedialog-David.cpp  filedialog.cpp  filedialog.h  stringfunc.cpp  stringfunc.h  strings.cpp  strings.h
dep/glfw/: CMakeLists.txt
dep/glfw/src/: cocoa_window.m  internal.h  window.c  x11_window.c
dep/minizip/: iowin32.c  iowin32.h  miniunz.c  minizip.c
dep/soil/: SOIL.c  SOIL.h  image_DXT.c  image_DXT.h  stb_image_aug.c  stb_image_aug.h  stbi_DDS_aug.h  stbi_DDS_aug_c.h  wfile.c  wfopen.c  wfopen.h
dep/tinyfd/: tinyfiledialogs.c  tinyfiledialogs.h
dlib/: dlib.h
glfw/examples/: particles.c
glfw/include/GLFW/: glfw3.h
glfw/src/: win32_window.c  x11_window.c
src/: color.cpp  color.h  draw.cpp  draw.h  mineimator.cpp  mineimator.h
src/draw/: color.cpp  color.h  draw.cpp  draw.h  image.cpp  image.h
src/file/: filedialog.cpp  filedialog.h  image.cpp  image.h  package.h
src/project/: project.cpp  project.h
